# tests_for_triqs

./: .clang-tidy  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug.md
c++/tests_for_triqs/: CMakeLists.txt  tests_for_triqs.cpp  tests_for_triqs.hpp
doc/: CMakeLists.txt  about.rst  changelog.rst  conf.py.in  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
python/tests_for_triqs/: CMakeLists.txt  __init__.py  tests_for_triqs_module_desc.py  version.py.in
share/: CMakeLists.txt  tests_for_triqs.modulefile.in  tests_for_triqsvars.sh.in
share/cmake/: CMakeLists.txt  tests_for_triqs-config.cmake.in
test/c++/: CMakeLists.txt  basic.cpp
test/python/: Basic.py  CMakeLists.txt
